--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-core:17.0.0'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.github.rtoshiro.mflibrary:mflibrary:1.0.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
