--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.0.1'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.github.rtoshiro.mflibrary:mflibrary:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
